implemented basic API requests to launch the home page

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/my_blog
     username: postgres
     password: zaq12wsx
+
+#  default values for initialization:
+blog:
+  title: DevPub
+  subtitle: Рассказы разработчиков
+  phone: +7 903 666-44-55
+  email: mail@mail.ru
+  copyright: Дмитрий Сергеев
+  copyrightFrom: 2005
