--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
     username: ${DATABASE_USERNAME:postgres}
     password: ${DATABASE_PASSWORD:zaq12wsx}
 
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
+
   mail:
     host: smtp.gmail.com
     port: 587
